[package]
name = "threadfin"
version = "0.1.1"
description = "A thread pool for running multiple tasks on a configurable group of threads."
authors = ["Stephen M. Coakley <me@stephencoakley.com>"]
license = "MIT"
keywords = ["threadpool", "thread", "pool", "parallel", "async"]
categories = ["concurrency"]
repository = "https://github.com/sagebind/threadfin"
documentation = "https://docs.rs/threadfin/"
readme = "README.md"
edition = "2018"

[dependencies]
crossbeam-channel = "0.5"
num_cpus = "1"
once_cell = "1"
waker-fn = "1"

[dev-dependencies]
criterion = "0.3"
futures-timer = "3"
rusty_pool = "0.6"
threadpool = "1"

[[bench]]
name = "pool"
harness = false
